# StegoEval

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.sh  zensical.toml
.github/workflows/: docs.yml
config/: default_config.yaml
docs/: csv-structure.md  default-configs.md  limitations.md  scoring.md
docs/api/: algorithms.md  attacks.md  core.md  metrics.md
examples/: run_benchmark.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
results/: results.csv  summary.md
scripts/: download_datasets.py
stegoeval/: cli.py  scoring.py
stegoeval/attacks/: compression.py  filtering.py  geometric.py  noise.py
stegoeval/config/: schema.py
stegoeval/core/: attack_runner.py  dataset_loader.py  evaluator.py
stegoeval/metrics/: distortion.py  robustness.py
stegoeval/reporting/: plots.py  report_generator.py  tables.py
stegoeval/stego_algorithms/: base.py  example_cli_adapter.py  example_lsb.py
